@@ -12,4 +12,10 @@ class Cron(metaclass=PoolMeta):
         cls.method.selection.extend([
                 ('product.product|recompute_cost_price_from_moves',
                     "Recompute Cost Price from Moves"),
+                ('stock.shipment.out|reschedule',
+                    "Reschedule Customer Shipments"),
+                ('stock.shipment.in.return|reschedule',
+                    "Reschedule Supplier Return Shipments"),
+                ('stock.shipment.internal|reschedule',
+                    "Reschedule Internal Shipments"),
                 ])
